[#495] Nav Bar positioning: Played around with some of the margins, widths, and paddings. This seems more consistent, and doesn't jump when going to and from fixed positioning.

--- a/beta-prototype/supplier/static/css/base.css
+++ b/beta-prototype/supplier/static/css/base.css
@@ -57,9 +57,8 @@ nav.backlink a .title {
   position: static;
   background-color: var(--color-nhs-blue);
   text-align: right;
-  padding:0.5em 1em;
+  padding:0.5em 0;
   z-index: 3;
-  /* border-bottom: 2px solid white; */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
